Transfer modal display fixed on mobile

--- a/src/components/BeneficiaryModal.module.css
+++ b/src/components/BeneficiaryModal.module.css
@@ -20,6 +20,10 @@
   justify-content: center;
 }
 
+.modalBody p {
+  font-size: 1rem;
+}
+
 .formGroup {
   display: flex;
   justify-content: space-around;
