--- a/src/components/LoginForm.module.css
+++ b/src/components/LoginForm.module.css
@@ -18,7 +18,3 @@
   padding: 10px;
   border-bottom: 2px solid #4f4f4f;
 }
-
-.errorMessage {
-  color: red;
-}
